<?xml version="1.0"?>
<package format="2">
  <name>am_AruCo_tracker</name>
  <version>0.1.0</version>
  <description>The am_AruCo_tracker package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jeonghyun@gmail.com">jeonghyun</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mavros_msgs</build_depend> 
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_filters</build_depend>
  
</package>
